# rust-concepts

./: README.md
casting/src/: main.rs
collections/src/: main.rs
constants/src/: main.rs
errors/src/: main.rs
file_system/src/: file_manager.rs  main.rs
first-program/: main.rs
flow_control/src/: main.rs
functions/src/: main.rs
functions_shared/: Cargo.toml  README.md
functions_shared/src/: lib.rs
math/: Cargo.toml
math/src/: main.rs
modules/src/: main.rs
modules/src/operations/: math.rs
structured/: Cargo.toml
structured/src/: main.rs
